# 8080-emulator

./: CMakeLists.txt
include/: cpu.hpp  state.hpp
src/: CMakeLists.txt  cpu.cpp
tests/: CMakeLists.txt  cpuTest.cpp  memoryTest.cpp  registerTest.cpp  test.cpp
